Cleanup UpdateCommandBuilder interface